# GB-Drone

./: .gitignore  README.md
hardware/GB-Drone_master/: GB-Drone_master.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc  Sheet2.SchDoc
hardware/GB-Drone_master/__Previews/: Sheet1.SchDocPreview
hardware/GB-Drone_master_aux/: GB-Drone_master_aux.PrjPcb  PCB1.PcbDoc  PCB2.PcbDoc  Sheet1.SchDoc  Sheet3.SchDoc
hardware/GB-Drone_master_v2_main/: GB-Drone_master_main.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc  Sheet2.SchDoc
hardware/GB-Drone_master_v2_power/: GB-Drone_master_power.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc
hardware/GB-Drone_remote/: GB-Drone_remote.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc  Sheet2.SchDoc
hardware/GB-Drone_remote/Project Outputs for GB-Drone_remote/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html
hardware/GB-Drone_remote/__Previews/: Sheet1.SchDocPreview
source/master/: CMakeLists.txt  partitions.csv  pre_processing.bat  sdkconfig  sdkconfig.old
source/master/components/anotic_debug/: anotic_debug.c
source/master/components/i2c_bus/: CMakeLists.txt  i2c_bus.c
source/master/components/io_define/: io_define.c
source/master/components/isr_manager/: CMakeLists.txt  isr_manager.c
source/master/components/minmea/: CMakeLists.txt
source/master/components/mpu_driver/: CMakeLists.txt  mpu_driver.c
source/master/components/task_manager/: CMakeLists.txt  task_manager.c
source/master/main/: CMakeLists.txt  app_main.c
source/remote/: pre_processing.bat  sdkconfig  sdkconfig.old
source/remote/components/task_manager/: CMakeLists.txt  controller.c  lvgl_task.c  quad_3d.c  task_manager.c
source/remote/main/: app_main.c
source/utility/Fusion/: CMakeLists.txt  FusionAhrs.c
source/utility/Fusion/include/: FusionCalibration.h
source/utility/barometer/: CMakeLists.txt  Kconfig  README  baro_math.c  bmp280.c  ms5611.c
source/utility/barometer/include/: baro_driver.h  bmp280.h  ms5611.h
source/utility/bmp280/: CMakeLists.txt  bmp280.c
source/utility/bmp280/include/: bmp280.h
source/utility/compass/: CMakeLists.txt  Kconfig  qmc5883l.c
source/utility/compass/include/: compass_driver.h  qmc5883l.h
source/utility/disp_driver/: CMakeLists.txt  Kconfig  component.mk  disp_driver.c  disp_driver.h  disp_spi.c  disp_spi.h
source/utility/disp_driver/disp_tft/: EVE_commands.c  EVE_config.h  FT81x.c  FT81x.h  GC9A01.c  GC9A01.h  Kconfig  hx8357.c  hx8357.h  il3820.c  il3820.h  ili9341.c  ili9341.h  ili9481.c  ili9481.h  ili9486.c  ili9486.h  ili9488.c  ili9488.h  jd79653a.c  jd79653a.h  ra8875.c  ra8875.h  sh1107.c  sh1107.h  ssd1306.c  ssd1306.h  st7735s.c  st7735s.h  st7789.c  st7789.h  st7796s.c  st7796s.h  uc8151d.c
source/utility/disp_driver/disp_touch/: FT81x.c  FT81x.h  Kconfig  adcraw.c  adcraw.h  ft6x36.c  ft6x36.h  ra8875_touch.c  ra8875_touch.h  stmpe610.c  stmpe610.h  touch_driver.c  touch_driver.h  xpt2046.c  xpt2046.h
source/utility/error_handle/: error_handle.c
source/utility/error_handle/include/: error_handle.h
source/utility/gps_driver/: CMakeLists.txt  README  gps_driver.c
source/utility/gps_driver/include/: gps_driver.h
source/utility/imu_driver/: CMakeLists.txt  Kconfig  imu_driver.c  mpu_driver.c
source/utility/imu_driver/include/: filter.h  icm42688.h  (+4 more)
source/utility/laser/: CMakeLists.txt  README  laser_ranging.c  vl53l1x.c
source/utility/laser/include/: laser_ranging.h  vl53l1x.h
source/utility/laser/vl53l1x/API/platform/src/: vl53l1_platform.c
source/utility/lv_examples/: CMakeLists.txt  Kconfig  README  lv_ex_conf.h
source/utility/lv_examples/include/: lvgl_example.h
source/utility/lv_examples/lv_examples/: lv_ex_conf_template.h
source/utility/lvgl/: CMakeLists.txt  Kconfig  lvgl.mk
source/utility/max1704x/: CMakeLists.txt  README  max1704x.c
source/utility/minmea/: VERSION  minmea.c
source/utility/mpu_driver/: CMakeLists.txt  Kconfig  filter.c  mpu_driver.c  mpu_math.c
source/utility/nrf24/: CMakeLists.txt  Kconfig  nrf24_interface.c
source/utility/optical_flow/: CMakeLists.txt  README  pmw3901.c
source/utility/tft_driver/: CMakeLists.txt  README  st7735.c  st7789.c  tft_espi.c  tft_sprite.c
source/utility/tinygl/: CMakeLists.txt  VERSION  component.mk
source/utility/tinygl/examples/: tobjparse.h
source/utility/tinygl/include/: zfeatures.h
tools/: build-master.bat  build-remote.bat  build-tool.bat  calibration_data.csv  env_setting.bat  gyro_acc_calibration.py  mag_calibration.py  origin_mag_data.csv  out.txt  uncalibration_data.csv  x-1g.csv  x1g.csv  y-1g.csv  y1g.csv  z-1g.csv  z1g.csv
tools/esp-idf-ftpServer/: VERSION  partitions_example.csv  sdkconfig  sdkconfig.old
tools/esp-idf-ftpServer/main/: ftp.c  main.c
tools/gyro_acc_calibration_data/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv
(+35 files in other folders)
